objects/GLLA_Project_deprecated__c.object
<CustomObject>
    <fields>
        <fullName>Application_Received_Date__c</fullName>
        <label>Application Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area_of_Concern__c</fullName>
        <label>Area of Concern</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All AOCs</fullName>
                </value>
                <value>
                    <fullName>Ashtabula River, OH</fullName>
                </value>
                <value>
                    <fullName>Black River, OH</fullName>
                </value>
                <value>
                    <fullName>Buffalo River, NY</fullName>
                </value>
                <value>
                    <fullName>Clinton River, MI</fullName>
                </value>
                <value>
                    <fullName>Cuyahoga River, OH</fullName>
                </value>
                <value>
                    <fullName>Deer Lake</fullName>
                </value>
                <value>
                    <fullName>Detroit River, MI</fullName>
                </value>
                <value>
                    <fullName>Eighteenmile Creek, NY</fullName>
                </value>
                <value>
                    <fullName>Fox River/Green Bay, WI</fullName>
                </value>
                <value>
                    <fullName>Grand Calumet River/Indiana Harbor Canal, IN</fullName>
                </value>
                <value>
                    <fullName>Kalamazoo River, MI</fullName>
                </value>
                <value>
                    <fullName>Manistique River, MI</fullName>
                </value>
                <value>
                    <fullName>Maumee River, OH</fullName>
                </value>
                <value>
                    <fullName>Menominee River, WI</fullName>
                </value>
                <value>
                    <fullName>Milwaukee Estuary, WI</fullName>
                </value>
                <value>
                    <fullName>Muskegon Lake, MI</fullName>
                </value>
                <value>
                    <fullName>Niagara River, NY</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Oswego River, NY</fullName>
                </value>
                <value>
                    <fullName>Presque Isle Bay, PA</fullName>
                </value>
                <value>
                    <fullName>River Raisin, MI</fullName>
                </value>
                <value>
                    <fullName>Rochester Embayment, NY</fullName>
                </value>
                <value>
                    <fullName>Rouge River, MI</fullName>
                </value>
                <value>
                    <fullName>Saginaw River, MI</fullName>
                </value>
                <value>
                    <fullName>Sheboygan River, WI</fullName>
                </value>
                <value>
                    <fullName>St. Clair River, MI</fullName>
                </value>
                <value>
                    <fullName>St. Lawrence River, NY</fullName>
                </value>
                <value>
                    <fullName>St. Louis River, MN</fullName>
                </value>
                <value>
                    <fullName>St. Mary's River, MI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closeout_Date__c</fullName>
        <label>Closeout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Summary_Comments__c</fullName>
        <label>Financial Summary Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <label>Location City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <label>Location State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Project_ID__c</fullName>
        <label>Master Project ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Status_Comments__c</fullName>
        <label>Project Status Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>This object was used to store the GLLA Project details, but it has since been deprecated in favor of the Projects object and is not to be used anymore.</description>
    <label>GLLA Project deprecated</label>
    <nameField>
        <label>Project Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GLLA Project deprecated</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Master_Project_ID__c</columns>
        <columns>Area_of_Concern__c</columns>
        <columns>Project_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>